SEO descriptions for pages

--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Galerie' %}
-{% set description = 'V galerii stránky dozvuků léta naleznete fotografie z předešlých ročníků festivalu.' %}
+{% set description = 'V galerii stránky dozvuků léta naleznete fotografie z předešlých ročníků festivalu. V České Třebové pod Peklákem na Vás i letos čeká mnoho interpretů na které se můžete těšit. Budou zde působit jména jako například Paulie Garand, Marpo, Michal Hrůza a mnoho dalších.' %}
 
 {% set crossroads = [
     {
