--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Kapely' %}
-{% set description = 'V sekci kapely webových stránek dozvuků léta naleznete informace o kapelách, účinkujících na následujícím ročníku festivalu' %}
+{% set description = 'V sekci kapely webových stránek dozvuků léta naleznete informace o kapelách, účinkujících na následujícím ročníku festivalu. V České Třebové pod Peklákem na Vás tento ročník čeká mnoho interpretů, na které se můžete těšit. Kupujte lístky v předprodeji, dokud jsou dostupné za lepší cenu.' %}
 
 {% set crossroads = [
     {
