--- a/src/tpl/Views/Kapely/ajbrix&astroboy.twig
+++ b/src/tpl/Views/Kapely/ajbrix&astroboy.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - AJ Brix &Astro Boy' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela AJ Brix &Astro Boy' %}
+{% set description = 'Na festivalu Dozvuky léta v České Třebové pod Peklákem dorazí i AJ Brix &Astro Boy. AJ Brix je charismatický mladý rapper, reprezentující hlas mladé generace. Velmi dobře zapadl do české rapové komunity, a to nejen oblibou u fanoušků, ale i u ostatních umělců.' %}
 
 {% block content %}
 
