--- a/src/tpl/Views/Kapely/doga.twig
+++ b/src/tpl/Views/Kapely/doga.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Doga' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Doga' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Doga. Při tvorbě programu Dozvuky léta 2023 jsme mysleli také na fanoušky tvrdé hudby. Doga to je energií nabušený nekompromisní 100% live rock’n’roll. Pódia válcuje kapela už 35 let, za která má na svém kontě již 11 desek, z toho dvě zlaté a jednu platinovou. Dokonce si střihla i klip v Americe. Vedle řízného kytarového zvuku baví koncerty Dogy také svým originálním vizuálem, který doplňují ohně, lasery nebo i padající sníh.' %}
 
 {% block content %}
 
