--- a/src/tpl/Views/Kapely/husykrk.twig
+++ b/src/tpl/Views/Kapely/husykrk.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Husý krk' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Husý krk' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Husý krk. Mladá kapela, jejíž členové pochází z údolí potoku Husí krk, si už třetím rokem hraje vlastními slovy „co chce“. Za sebou mají tito tři borci již vystoupení na PunkOff ve vodáckém tábořišti Cakle, DosiFestu ve Sloupnici, Přívratském vinobraní,  Festivalu mladých kapel v Sobkovicích a Benátské noci v Bystřeci.' %}
 
 {% block content %}
 
