--- a/src/tpl/Views/Kapely/jamaron.twig
+++ b/src/tpl/Views/Kapely/jamaron.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Jamaron' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Jamaron' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Jamaron. Tato česká rocková kapela v čele s charismatickou frontwoman Marií Dostálovou, jejíž výrazný hlas obklopený hutným zvukem elektrických kytar a nekompromisních bicích je dominantou této mladé pětice. Jamaron si zakládají na srozumitelných a smysluplných českých textech, se kterými se řada posluchačů snadno ztotožní. Další devizou jsou silné chytlavé refrény a mladistvá energie, která se na posluchače valí z pódia při každém jejich koncertě. Nejen z tohoto důvodu jsou řazeni mezi nejzajímavější mladé rockové kapely současnosti. To dokazuje i její vítězství v Anketě Žebřík, ve které získali cenu Objev roku 2020. Kapelu založili v roce 2013 sourozenci Jakub, Marie a Ondřej Dostálovi, proto tedy JaMarOn. Sourozenecké trio doplňují bubeník Václav Hejda a baskytarista Filip Karlík. Všichni jsou od dětství propojeni hudbou a svázáni společným cílem sdělovat skrze tvorbu svoje pocity, názory a přesvědčení.' %}
 
 {% block content %}
 
