--- a/src/tpl/Views/Kapely/marpo.twig
+++ b/src/tpl/Views/Kapely/marpo.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Marpo & TroubleGang' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Marpo & TroubleGang' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Marpo & TroubleGang. Marpo, vlastním jménem Otakar Petřina, se věnuje muzice už od dětství, kdy si koupil mikrofon a svoji tvorbu zaznamenával na magnetofon. Postupně nahrával svá alba s různými interprety, jako jsou například Gipsy, MC Wohnout nebo Hugo Toxxx. Založil kapelu TroubleGang a zároveň od roku 2008 bubnoval ve skupině Chinaski. Po personálním zemětřesení v listopadu 2017 Chinaski opustil a naplno se věnoval vystupování s TroubleGangem. V roce 2018 vystupoval jako první český rapper v O2 aréně, kde mu aplaudovalo 12 tisíc fanoušků.' %}
 
 {% block content %}
 
