--- a/src/tpl/Views/Kapely/michalhruza.twig
+++ b/src/tpl/Views/Kapely/michalhruza.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Michal Hrůza' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Michal Hrůza' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Michal Hrůza. Michal Hrůza je český zpěvák a zakládající člen skupiny Ready Kirken. Hudbě se začal věnovat na střední vojenské škole, kde byl členem školní hudební skupiny a kde hrál amatérské divadlo. Jeho skladba pro Anetu Langerovou Voda živá byla v letech 2005 a 2006 hitem roku. V roce 2006 skupinu opustil a založil Kapelu HRŮZY, natočil album Bílá velryba (2007), Napořád (2009) a Noc (2012), podílel se i na hudbě k filmu Lidice (2011) a filmu Martin a Venuše (2012). Je autorem i mnoha televizních znělek například pro seriál Vyprávěj, Mazalové a Mistr E.' %}
 
 {% block content %}
 
