--- a/src/tpl/Views/Kapely/safariexpres.twig
+++ b/src/tpl/Views/Kapely/safariexpres.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Safari Expres' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Safari Expres' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Safari Expres. Původně brněnská kapela Skákající králíčci na přelomu roku dostala nový rytmický náboj třebovské krve a proměnila se tak doslova v brněnsko-třebovský fusion - nově však pod názvem Safari Express. Studentský léta jsou pryč, ale Safari Express zůstává věrný svým kořenům inspirovaným mňágovským rockem se ságem v zádech, který Vám tentokrát bude servírovat v nádražní baště republiky - České Třebové - na Dozvucích léta! Tímhle expresem na Dozvuky léta dorazí Honza Sádovský - sólová kytara a zpěv,	 Jirka Palíšek - doprovodná kytara a zpěv, Filip Škorňa - basová kytara, Tomáš Dvořák - saxofon a Natka Burešová - bicí.' %}
 
 {% block content %}
 
