--- a/src/tpl/Views/Novinky/zahajeni.twig
+++ b/src/tpl/Views/Novinky/zahajeni.twig
@@ -1,4 +1,4 @@
-{% extends '@layout/layout.twig' %}
+{# {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Arctic Monkeys' %}
 {% set description = 'Arctic monkeys je rocková kapela, která bude účinkovat na festivalu dozvuky léta 1.9.2023.' %}
 
@@ -86,4 +86,4 @@
     </section>
 </main>
 
-{% endblock %}
+{% endblock %} #}
