--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta' %}
-{% set description = 'Domovská stránka festivalu dozvuky léta, konající se v České Třebové' %}
+{% set description = 'Webové stránky festivalu Dozvuky léta v České Třebové pod Peklákem, obsahují veškeré informace pro návštěvníky. Na letošní ročník se můžete těšit na mnoho interpretů, jako například Paulie Garand, Marpo, Michal Hrůza a mnoho dalších. Určitě neváhejte a kupujte lístky na ticketportal.cz, dokud je ještě čas!' %}
 
 
 {% block content %}
