--- a/src/tpl/Views/Kapely/375mnm.twig
+++ b/src/tpl/Views/Kapely/375mnm.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - 375 metrů nad mořem' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela 375 metrů nad mořem' %}
+{% set description = 'Poslední kapelou, která se představí v rámci prvního dne programu Dozvuků léta bude opět 375 metrů nad mořem. Jedná se o zábavovou, plesovou i svatební kapelu z České Třebové' %}
 
 {% block content %}
 
