--- a/src/tpl/Views/Kapely/inst60.twig
+++ b/src/tpl/Views/Kapely/inst60.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - INST60' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela INST60' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela INST60. Místní kapela INST60 se pohybuje někde mezi popem a rockem, soustředí se výhradně na vlastní tvorbu s texty v angličtině. Od roku 2018 hraje ve složení Bohi - klávesy a zpěv, Ivoš - baskytara, Majkl - bubny, Fána K. - kytara, Honza N. - kytara. Historie kapely sice sahá až do roku 2002, ale ze zakládajících členů však zůstal pouze Bohi. Poprvé se kapela na Dozvucích léta představila již při prvním ročníku, takže všichni moc dobře víme, že se je na co těšit.' %}
 
 {% block content %}
 
