--- a/src/tpl/Views/Kapely/strasnybanani.twig
+++ b/src/tpl/Views/Kapely/strasnybanani.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - Strašný Banáni' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Strašný Banáni' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela Strašný Banáni. Představujeme vám kapelu, která letos otevře náš festival. Banáni jsou opravdovým přírodním antidepresivem především co se týká podpory tvorby serotoninu, jsou mezi ovocem skutečnými favority. Jejich hudba baví, dává, rozesmívá a kope. Ale bacha! Každý, kdo přišel na jejich koncert... jako kdyby přestal brát život tak vážně.' %}
 
 {% block content %}
 
