--- a/src/tpl/Views/Kapely/theattics.twig
+++ b/src/tpl/Views/Kapely/theattics.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - The Attics' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela The Attics' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela The Attics. Českotřebovská rocková kapela, mající též kořeny pevně zakotvené v nedalekém Rybníku, vystoupí na Dozvucích léta již po třetí. Z původní odpolední akustické session se kluci přesunou do nočních hodin, kde, již s kompletní elektrickou výbavou, vám zahrají jejich nové skladby, a také něco málo od rockových legend typu Red Hot Chilli Peppers, Foo fighters…' %}
 
 {% block content %}
 
