--- a/src/tpl/Views/Kapely/theexcited.twig
+++ b/src/tpl/Views/Kapely/theexcited.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/layout.twig' %}
 {% set pageTitle = 'Dozvuky léta - The Excited' %}
-{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela The Excited' %}
+{% set description = 'Na festivalu dozvuky léta v České Třebové pod Peklákem, bude letos účinkovat kapela The Excited. Kapela The Excited byla založena roku 2020 vysokomýtským zpěvákem a multiinstrumentalistou Adamem Čuříkem. Kapela hrající poprock s autorskými texty v českém jazyce měla svůj první koncert rok po založení, a to prostřednictvím livestreamu v místním MKlubu. V minulém roce kapela vyjela na své první celorepublikové turné s názvem Revoluce rocku tour 2022, na které objela osm měst, mezi kterými byly Pardubice, Vysoké Mýto, ale také Stráž pod Ralskem a Litomyšl. V roce 2023 se přes zimní měsíce kapela schovala do studia kde nahráli čtyři písničky do připravovaného alba které by mělo vyjít na jaře roku 2024.' %}
 
 {% block content %}
 
