compressed band images, added sponsors

--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -4,79 +4,79 @@
 
 {% set crossroads = [
     {
-        img: "bands/01_Strasni banani.jpg",
+        img: "bands/01_Strasni banani.webp",
         alt: "Strašný Banáni",
         title: "Strašný Banáni",
         link: "/kapely/strasnybanani",
     },
     {
-        img: "bands/02_INST60.jpg",
+        img: "bands/02_INST60.webp",
         alt: "INST60",
         title: "INST60",
         link: "/kapely/inst60",
     },
     {
-        img: "bands/03_Jamaron.jpg",
+        img: "bands/03_Jamaron.webp",
         alt: "Jamaron",
         title: "Jamaron",
         link: "/kapely/jamaron",
     },
     {
-        img: "bands/04_Paulie Garand.jpeg",
+        img: "bands/04_Paulie Garand.webp",
         alt: "Paulie Garand",
         title: "Paulie Garand",
         link: "/kapely/pauliegarand",
     },
     {
-        img: "bands/05_Doga.jpg",
+        img: "bands/05_Doga.webp",
         alt: "Doga",
         title: "Doga",
         link: "/kapely/doga",
     },
     {
-        img: "bands/06_375mnm.jpeg",
+        img: "bands/06_375mnm.webp",
         alt: "375 metrů nad mořem",
         title: "375 metrů nad mořem",
         link: "/kapely/375mnm",
     },
     {
-        img: "bands/07_TheExcited.jpeg",
+        img: "bands/07_TheExcited.webp",
         alt: "The Excited",
         title: "The Excited",
         link: "/kapely/theexcited",
     },
     {
-        img: "bands/08_SafariExpres.jpeg",
+        img: "bands/08_SafariExpres.webp",
         alt: "Safari Expres",
         title: "Safari Expres",
         link: "/kapely/safariexpres",
     },
     {
-        img: "bands/09_AjBrix_AstroBoy.jpeg",
+        img: "bands/09_AjBrix_AstroBoy.webp",
         alt: "AJ Brix & Astro Boy",
         title: "AJ Brix & Astro Boy",
         link: "/kapely/ajbrix&astroboy",
     },
     {
-        img: "bands/10_MIchalHruza.jpg",
+        img: "bands/10_MIchalHruza.webp",
         alt: "Michal Hrůza & kapela Hrůzy",
         title: "Michal Hrůza & kapela Hrůzy",
         link: "/kapely/michalhruza",
     },
     {
-        img: "bands/11_TheAttics.jpg",
+        img: "bands/11_TheAttics.webp",
         alt: "The Attics",
         title: "The Attics",
         link: "/kapely/theattics",
     },
     {
-        img: "bands/12_Marpo.jpeg",
+        img: "bands/12_Marpo.webp",
         alt: "Marpo & kapela TroubleGang",
         title: "Marpo & kapela TroubleGang",
         link: "/kapely/marpo",
     },
     {
-        img: "bands/13_HusýKrk.jpg",
+        img: "bands/13_HusýKrk.webp",
         alt: "Husý krk",
         title: "Husý krk",
         link: "/kapely/husykrk",
