--- a/src/tpl/Views/Kapely/375mnm.twig
+++ b/src/tpl/Views/Kapely/375mnm.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/06_375mnm.jpeg",
+                img: "bands/06_375mnm.webp",
                 alt: "375 metrů nad mořem",
                 title: "375 metrů nad mořem",
             }} %}
