--- a/src/tpl/Views/Kapely/ajbrix&astroboy.twig
+++ b/src/tpl/Views/Kapely/ajbrix&astroboy.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/09_AjBrix_AstroBoy.jpeg",
+                img: "bands/09_AjBrix_AstroBoy.webp",
                 alt: "AJ Brix &Astro Boy",
                 title: "AJ Brix &Astro Boy",
             }} %}
