--- a/src/tpl/Views/Kapely/doga.twig
+++ b/src/tpl/Views/Kapely/doga.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/05_Doga.jpg",
+                img: "bands/05_Doga.webp",
                 alt: "Doga",
                 title: "Doga",
             }} %}
