--- a/src/tpl/Views/Kapely/husykrk.twig
+++ b/src/tpl/Views/Kapely/husykrk.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/13_HusýKrk.jpg",
+                img: "bands/13_HusýKrk.webp",
                 alt: "Husý krk",
                 title: "Husý krk",
             }} %}
