--- a/src/tpl/Views/Kapely/inst60.twig
+++ b/src/tpl/Views/Kapely/inst60.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/02_INST60.jpg",
+                img: "bands/02_INST60.webp",
                 alt: "INST60",
                 title: "INST60",
             }} %}
