--- a/src/tpl/Views/Kapely/jamaron.twig
+++ b/src/tpl/Views/Kapely/jamaron.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/03_Jamaron.jpg",
+                img: "bands/03_Jamaron.webp",
                 alt: "Jamaron",
                 title: "Jamaron",
             }} %}
