--- a/src/tpl/Views/Kapely/marpo.twig
+++ b/src/tpl/Views/Kapely/marpo.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/12_Marpo.jpeg",
+                img: "bands/12_Marpo.webp",
                 alt: "Marpo & TroubleGang",
                 title: "Marpo & TroubleGang",
             }} %}
