--- a/src/tpl/Views/Kapely/michalhruza.twig
+++ b/src/tpl/Views/Kapely/michalhruza.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/10_MIchalHruza.jpg",
+                img: "bands/10_MIchalHruza.webp",
                 alt: "Michal Hrůza & kapela Hrůzy",
                 title: "Michal Hrůza & kapela Hrůzy",
             }} %}
