--- a/src/tpl/Views/Kapely/pauliegarand.twig
+++ b/src/tpl/Views/Kapely/pauliegarand.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/04_Paulie Garand.jpeg",
+                img: "bands/04_Paulie Garand.webp",
                 alt: "Paulie Garand",
                 title: "Paulie Garand",
             }} %}
