--- a/src/tpl/Views/Kapely/safariexpres.twig
+++ b/src/tpl/Views/Kapely/safariexpres.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/08_SafariExpres.jpeg",
+                img: "bands/08_SafariExpres.webp",
                 alt: "Safari Expres",
                 title: "Safari Expres",
             }} %}
