--- a/src/tpl/Views/Kapely/strasnybanani.twig
+++ b/src/tpl/Views/Kapely/strasnybanani.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/01_Strasni banani.jpg",
+                img: "bands/01_Strasni banani.webp",
                 alt: "Strašný Banáni",
                 title: "Strašný Banáni",
             }} %}
