--- a/src/tpl/Views/Kapely/theattics.twig
+++ b/src/tpl/Views/Kapely/theattics.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/11_TheAttics.jpg",
+                img: "bands/11_TheAttics.webp",
                 alt: "The Attics",
                 title: "The Attics",
             }} %}
