--- a/src/tpl/Views/Kapely/theexcited.twig
+++ b/src/tpl/Views/Kapely/theexcited.twig
@@ -23,7 +23,7 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/07_TheExcited.jpeg",
+                img: "bands/07_TheExcited.webp",
                 alt: "The Excited",
                 title: "The Excited",
             }} %}
