--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -96,6 +96,55 @@
                     }} %}
                 </div>
             </div>
+            <div class="footer__sponsor-item">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/cargo.png"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/ekobi.png"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/hoki.png"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/ldm.png"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/orlicko.png"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/rybnik.png"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/sazava.png"
+                    }} %}
+                </div>
+            </div>
         </div>
         {# <div class="footer__copyright">&#169 Petr Foldyna, 2023. IČO: 467 798 632, mail: petr.foldyna12@gmail.com tel: +420 606 767 826</div> #}
         <div class="footer__copyright">&#169 Pro Vás od Nás 2023</div>
