program / table WIP

--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -95,6 +95,10 @@
 						link: "/#listky"
 					},
 					{
+						title: "Program",
+						link: "/program"
+					},
+					{
 						title: "Galerie",
 						link: "/galerie"
 					},
