program fixes, deleting unnecessary images

--- a/src/tpl/program.twig
+++ b/src/tpl/program.twig
@@ -8,7 +8,7 @@
         title: "Pátek 01.09. 2023:",
     },
     {
-        img: "program/SOBOTA.webp",
+        img: "program/Sobota.webp",
         title: "Sobota 02.09. 2023:",
     }
 ]%}
