--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -62,10 +62,10 @@
                         <a target="_blank" href="https://www.facebook.com/events/268257195760378/ " class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "fb" }} %}</a>
                         <a target="_blank" href="https://www.instagram.com/dozvuky_leta/" class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
                     </div>
-                    <h4 class="u-text-center">Kupujte lístky:</h4>
+                    {# <h4 class="u-text-center">Kupujte lístky:</h4>
                     <div class="footer__socials">
                         <a target="_blank" href="https://www.ticketportal.cz/event/DOZVUKY-LETA-2023?IDPartner=338#fullscreen-search" class="footer__social-link footer__social-link--ticket">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "ticket" }} %}</a>
-                    </div>
+                    </div> #}
                 </div>
                 <div class="grid__col col-4-12@md">
                     <div class="footer__logo">
@@ -147,6 +147,6 @@
             </div>
         </div>
         {# <div class="footer__copyright">&#169 Petr Foldyna, 2023. IČO: 467 798 632, mail: petr.foldyna12@gmail.com tel: +420 606 767 826</div> #}
-        <div class="footer__copyright">&#169 Pro Vás od Nás 2023</div>
+        <div class="footer__copyright">&#169 Pro Vás od Nás 2023, Web vytvořil: Petr Foldyna, IČO: 467 798 632, E-mail: petr.foldyna12@gmail.com</div>
     </div>
 </footer>
