--- a/src/tpl/components/core/header/header.twig
+++ b/src/tpl/components/core/header/header.twig
@@ -15,7 +15,7 @@
                 {% endfor %}
             </ul>
         </div>
-        <button type="button" class="header__toggle js-menu-btn" aria-label="Menu ">
+        <button name="menu" type="button" class="header__toggle js-menu-btn" aria-label="Menu ">
 			<span class="header__toggle-ico">
 				<span></span><span></span><span></span>
 			</span>
