--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -8,18 +8,11 @@
             <div class="grid">
                 <div class="grid__col col-3-12@md">
                     <div class="footer__contact">
-                        <h4>Konatktní e-mail:</h4>
-                        <ul>
-                            <li>mail: <a href="mailto:odnasprovas.zs@gmail.com">odnasprovas.zs@gmail.com</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="grid__col col-3-12@md">
-                    <div class="footer__contact">
                         <h4>Management:</h4>
-                        <span>Tomáš Kupka:</span>
                         <ul>
-                            <li>tel: <a href="tel:+420 732 583 521">+420 732 583 521</a></li>
+                            <li>Tomáš Kupka</li>
+                            <li>tel: <a href="tel:+420732583521">+420 732 583 521</a></li>
+                            <li>mail: <a href="mailto:odnasprovas.zs@gmail.com">tomas.kupka@dozvukyleta.cz</a></li>
                         </ul>
                     </div>
                 </div>
@@ -28,11 +21,8 @@
                         <h4>Booking kapel:</h4>
                         <span>Jan Růžička:</span>
                         <ul>
-                            <li>tel: <a href="tel:+420 606 065 201">+420 606 065 201</a></li>
-                        </ul>
-                        <span>Daniela Stránská:</span>
-                        <ul>
-                            <li>tel: <a href="tel:+420 603 435 773">+420 603 435 773</a></li>
+                            <li>tel: <a href="tel:+420606065201">+420 606 065 201</a></li>
+                            <li>mail: <a href="mailto:jan.ruzicka@dozvukyleta.cz">jan.ruzicka@dozvukyleta.cz</a></li>
                         </ul>
                     </div>
                 </div>
@@ -42,6 +32,17 @@
                         <span>Natálie Foldynová:</span>
                         <ul>
                             <li>tel: <a href="tel:+420 734 585 744">+420 734 585 744</a></li>
+                            <li>tel: <a href="mailto:natalie.foldynova@dozvukyleta.cz">natalie.foldynova@dozvukyleta.cz</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="grid__col col-3-12@md">
+                    <div class="footer__contact">
+                        <h4>Doprovodný program:</h4>
+                        <span>Daniela Stránská:</span>
+                        <ul>
+                            <li>tel: <a href="tel:+420 603 435 773">+420 603 435 773</a></li>
+                            <li>mail: <a href="mailto:daniela.stranska@dozvukyleta.cz">daniela.stranska@dozvukyleta.cz</a></li>
                         </ul>
                     </div>
                 </div>
