--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -5,8 +5,8 @@
                 title: "Kontakty",
                 tag: "h3",
             }} %}
-            <div class="grid">
-                <div class="grid__col col-3-12@md">
+            <div class="grid grid--center">
+                <div class="grid__col col-4-12@md">
                     <div class="footer__contact">
                         <h4>Management:</h4>
                         <ul>
@@ -16,7 +16,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="grid__col col-3-12@md">
+                <div class="grid__col col-4-12@md">
                     <div class="footer__contact">
                         <h4>Booking kapel:</h4>
                         <span>Jan Růžička:</span>
@@ -26,23 +26,33 @@
                         </ul>
                     </div>
                 </div>
-                <div class="grid__col col-3-12@md">
+                <div class="grid__col col-4-12@md">
                     <div class="footer__contact">
                         <h4>Stánkový prodej a brigádníci:</h4>
                         <span>Natálie Foldynová:</span>
                         <ul>
                             <li>tel: <a href="tel:+420 734 585 744">+420 734 585 744</a></li>
-                            <li>tel: <a href="mailto:natalie.foldynova@dozvukyleta.cz">natalie.foldynova@dozvukyleta.cz</a></li>
+                            <li>mail: <a href="mailto:natalie.foldynova@dozvukyleta.cz">natalie.foldynova@dozvukyleta.cz</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="grid__col col-3-12@md">
+                <div class="grid__col col-4-12@md">
                     <div class="footer__contact">
                         <h4>Doprovodný program:</h4>
                         <span>Daniela Stránská:</span>
                         <ul>
                             <li>tel: <a href="tel:+420 603 435 773">+420 603 435 773</a></li>
                             <li>mail: <a href="mailto:daniela.stranska@dozvukyleta.cz">daniela.stranska@dozvukyleta.cz</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="grid__col col-4-12@md">
+                    <div class="footer__contact">
+                        <h4>Koordinátor sponzorských vztahů: </h4>
+                        <span>Kateřina Vašátková:</span>
+                        <ul>
+                            <li>tel: <a href="tel:+420 731 937 199">+420 731 937 199</a></li>
+                            <li>mail: <a href="mailto:katerina.vasatkova@dozvukyleta.cz">katerina.vasatkova@dozvukyleta.cz</a></li>
                         </ul>
                     </div>
                 </div>
